--- a/index.html
+++ b/index.html
@@ -154,7 +154,16 @@
         </div>
     </section>
      <!-- Projects -->
-     <section class="projetos">
+     
+    <!--Descrição-->
+    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+        <div class="container">
+            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+            <h4>PT-BR</h4>
+            <br>
+            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. 
+                Sou movida pela cu<section class="projetos">
         <div class="album py-5 bg-light " id="projetos">
            <div class="container">
                <h2 class="text-center jumbotron-heading titulosVerdes">Projetos</h2>
@@ -193,7 +202,7 @@
                                alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
                                style="height: 225px; width: 100%; display: block;">
                            <div class="card-body">
-                               <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C e Y.
+                               <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C, Y.
                                </p>
                                <ul>
                                    <li>HTML</li>
@@ -213,20 +222,63 @@
                                </div>
                            </div>
                        </div>
+                   <div class="col-md-6">
+                       <div class="card mb-4 box-shadow">
+                           <img class="card-img-top"
+                           data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                           alt="Thumbnail [100%x225]" src="projeto3.png" data-holder-rendered="true"
+                           style="height: 225px; width: 100%a;max-width: 100%; display: block;">
+                           <div class="card-body">
+                               <p class="card-text">Esse projeto foi desenvolvido para criar um relógio digital simples que exibe a hora atual usando as tecnologias A, B, C. 
+                               </p>
+                               <ul>
+                                   <li>HTML</li>
+                                   <li>CSS</li>
+                                   <li>Javascript</li>
+                                   <br>
+                                   <br>
+                                   <br>
+                               </ul>
+                               <div class="d-flex justify-content-between align-items-center">
+                                   <div class="btn-group">
+                                       <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
+                                       <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                   </div>
+                                   <small class="text-muted">Projeto Web</small>
+                               </div>
+                           </div>
+                       </div>
                    </div>
-               </div>
-           </div>
-       </div>
-       </section>
-    <!--Descrição-->
-    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
-        <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <h4>PT-BR</h4>
-            <br>
-            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. 
-                Sou movida pela curiosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
+                   <div class="col-md-6">
+                       <div class="card mb-4 box-shadow">
+                           <img class="card-img-top"
+                               data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                               alt="Thumbnail [100%x225]" src="projeto4.png" data-holder-rendered="true"
+                               style="height: 225px; width: 100%; display: block;">
+                           <div class="card-body">
+                               <p class="card-text">Este projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
+                               </p>
+                               <ul>
+                                   <li>HTML</li>
+                                   <li>Javascript</li>
+                                   <li>CSS</li>
+                                   <br>
+                                   <br>
+                               </ul>
+                               <div class="d-flex justify-content-between align-items-center">
+                                   <div class="btn-group">
+                                       <a href="https://github.com/lauramachts0/PianoProject" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
+                                       <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                   </div>
+                                   <small class="text-muted">Projeto Web</small>
+                               </div>
+                            </div>
+                       </div>
+                   </div>
+               </div> 
+            </div>
+        </div>
+    </section>riosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
                 </p>
                 <br>
                 <br>
