--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         </div>
     </section>
      <!-- Projects -->
+    <section class="projetos">
      <div class="album py-5 bg-light " id="projetos">
            <div class="container">
                <h2 class="text-center jumbotron-heading titulosVerdes">Projetos</h2>
@@ -277,8 +278,7 @@
             <br>
             <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. 
-                Sou movida pela cu<section class="projetos">
-        riosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
+                Sou movida pela curiosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
                 </p>
                 <br>
                 <br>
