--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
             <li><span class="competencia-pontuacao">•</span> Javascript</li>
             <li><span class="competencia-pontuacao">•</span> Python</li>
             <li><span class="competencia-pontuacao">•</span> C#</li>
+            <li><span class="competencia-pontuacao">•</span> C</li>
             <li><span class="competencia-pontuacao">•</span> Scrum</li>
             <li><span class="competencia-pontuacao">•</span> SQL</li>
             <li><span class="competencia-pontuacao">•</span> Banco de Dados</li>
