--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
             <h4>PT-BR</h4>
             <br>
-            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), e atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
+            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. 
                 Sou movida pela curiosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
                 </p>
