--- a/index.html
+++ b/index.html
@@ -276,9 +276,14 @@
             <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
             <h4>PT-BR</h4>
             <br>
-            <p class="lead paragrafoBrancos">Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS), atualmente estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então tenho mergulhado de cabeça no universo da tecnologia. Estou imersa em uma jornada de descobertas e aprendizados. Desde antes de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e criando alguns projetos, incluindo este portfolio que você está lendo agora. 
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. 
-                Sou movida pela curiosidade e pelo desejo de aprendizado, e estou sempre pronta para abraçar novas oportunidades que surgirem no meu caminho. Estou constantemente buscando desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado é uma oportunidade de crescimento.
+            <p class="lead paragrafoBrancos">
+                Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
+
+                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está explorando agora.
+
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
+
+                Busco constantemente o desenvolvimento pessoal e profissional, e acredito firmemente que cada desafio enfrentado representa uma oportunidade de crescimento.
                 </p>
                 <br>
                 <br>
@@ -292,9 +297,14 @@
             <h2 class="jumbotron-heading titulosBrancos">about me</h2>
             <h4>ENG</h4>
             <br>
-            <p class="lead paragrafoBrancos">Hello! I'm Laura, I'm 18 years old and I'm from Porto Alegre (RS), and I'm currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam when I was 16, and since then I have immersed myself in the world of technology. I am immersed in a journey of discovery and learning. Since before I started college, I've been developing my programming skills and creating a few projects, including this portfolio you're reading now.
-                I have big goals to achieve, the main one being joining the Air Force. I am driven by curiosity and the desire to learn, always ready to embrace new opportunities that come my way.
-                I am constantly seeking personal and professional development, and I believe that each challenge faced is an opportunity for growth.
+            <p class="lead paragrafoBrancos">
+                Hello! My name is Laura, I'm 18 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
+
+                I am immersed in a journey of discovery and constant learning. Even before joining UFN, I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
+
+                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.
+
+                I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
             </p>
             <br>
             <br>
