--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <p class="lead paragrafoBrancos">
                 Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
 
-                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está explorando agora.
+                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
 
