--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
 
-                Busco constantemente o desenvolvimento pessoal e profissional, e acredito firmemente que cada desafio enfrentado representa uma oportunidade de crescimento.
+                Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
                 </p>
                 <br>
                 <br>
