--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                                    <div class="btn-group">
                                        <a href="https://github.com/lauramachts0/PianoProject" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
                                        <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                       <a href="https://www.youtube.com/playlist?list=PL15o6qu0MNGdwp6SFvsYMmqyPyVuoufid" target="_blank" class="btn btn-sm btn-outline-success">Ver em Funcionamento</a>
                                    </div>
                                    <small class="text-muted">Projeto Web</small>
                                </div>
