--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                                </ul>
                                <div class="d-flex justify-content-between align-items-center">
                                    <div class="btn-group">
-                                       <a href="https://github.com/lauramachts0/PianoProject" target="_blank" class="btn btn-sm btn-outline-success"><br></br><a>Ver Projeto</a>
-                                       <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary"><br></br><a></a>Ver Código</a>
+                                       <a href="https://github.com/lauramachts0/PianoProject" target="_blank" class="btn btn-sm btn-outline-success"><br></br>Ver Projeto</a>
+                                       <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary"><br></br>Ver Código</a>
                                        <a href="https://www.youtube.com/playlist?list=PL15o6qu0MNGdwp6SFvsYMmqyPyVuoufid" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a>
                                    </div>
                                    <small class="text-muted">Projeto Web</small>
