--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                    <li>CSS</li>
                                    <li>Javascript</li>
                                    <li>Bootstrap</li>
-                                   <br>
+                                   <li>jQuery</li>
                                    <br>
                                </ul>
                                <div class="d-flex justify-content-between align-items-center">
@@ -338,11 +338,13 @@
     <div class="container">
         <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
         <ul class="list-unstyled competencias-list">
-            <li><span class="competencia-pontuacao">•</span> Desenvolvimento Front-end</li>
+            <li><span class="competencia-pontuacao">•</span> Front-end</li>
             <li><span class="competencia-pontuacao">•</span> HTML</li>
             <li><span class="competencia-pontuacao">•</span> CSS</li>
             <li><span class="competencia-pontuacao">•</span> Bootstrap</li>
+            <li><span class="competencia-pontuacao">•</span> jQuery</li>
             <li><span class="competencia-pontuacao">•</span> Javascript</li>
+            <li><span class="competencia-pontuacao">•</span> TypeScript</li>
             <li><span class="competencia-pontuacao">•</span> Python</li>
             <li><span class="competencia-pontuacao">•</span> C#</li>
             <li><span class="competencia-pontuacao">•</span> C</li>
