--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
                                    <div class="btn-group">
                                        <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
                                        <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                       <a href="https://lauramachts0.github.io/RelogioDigital-HTML-CSS-Javascript/" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a> 
                                    </div>
                                    <small class="text-muted">Projeto Web</small>
                                </div>
