--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <a href="https://github.com/lauramachts0" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/laura-schneider-1bab1b2ba/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/_lauramachts/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank"><i style="color:white" class="fab fa-youtube"></i></a>
             <br>
             <br>
             <br>
@@ -337,25 +338,27 @@
  <!-- Competências -->
  <section id="competencias">
     <div class="container">
-        <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
-        <ul class="list-unstyled competencias-list">
-            <li><span class="competencia-pontuacao">•</span> Front-end</li>
-            <li><span class="competencia-pontuacao">•</span> HTML</li>
-            <li><span class="competencia-pontuacao">•</span> CSS</li>
-            <li><span class="competencia-pontuacao">•</span> Bootstrap</li>
-            <li><span class="competencia-pontuacao">•</span> jQuery</li>
-            <li><span class="competencia-pontuacao">•</span> Javascript</li>
-            <li><span class="competencia-pontuacao">•</span> TypeScript</li>
-            <li><span class="competencia-pontuacao">•</span> Python</li>
-            <li><span class="competencia-pontuacao">•</span> C#</li>
-            <li><span class="competencia-pontuacao">•</span> C</li>
-            <li><span class="competencia-pontuacao">•</span> Scrum</li>
-            <li><span class="competencia-pontuacao">•</span> SQL</li>
-            <li><span class="competencia-pontuacao">•</span> Banco de Dados</li>
-        </ul>
-        <br>
-        <br>
-        <br>
+        <div class="album py-5 bg-light">
+            <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
+            <ul class="list-unstyled competencias-list">
+                <li><span class="competencia-pontuacao">•</span> Front-end</li>
+                <li><span class="competencia-pontuacao">•</span> HTML</li>
+                <li><span class="competencia-pontuacao">•</span> CSS</li>
+                <li><span class="competencia-pontuacao">•</span> Bootstrap</li>
+                <li><span class="competencia-pontuacao">•</span> jQuery</li>
+                <li><span class="competencia-pontuacao">•</span> Javascript</li>
+                <li><span class="competencia-pontuacao">•</span> TypeScript</li>
+                <li><span class="competencia-pontuacao">•</span> Python</li>
+                <li><span class="competencia-pontuacao">•</span> C#</li>
+                <li><span class="competencia-pontuacao">•</span> C</li>
+                <li><span class="competencia-pontuacao">•</span> Scrum</li>
+                <li><span class="competencia-pontuacao">•</span> SQL</li>
+                <li><span class="competencia-pontuacao">•</span> Banco de Dados</li>
+            </ul>
+            <br>
+            <br>
+            <br>
+        </div>     
     </div>
 <!--contato-->
 </section>
