--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             margin-left: 0;
         }
         .competencia-pontuacao {
-            margin-right: 0px; 
+            margin-right: ; 
         }
     </style>
 </head>
