--- a/index.html
+++ b/index.html
@@ -337,21 +337,24 @@
     </section>
  <!-- Competências -->
  <section id="competencias">
-    <div class="container">
+    <div class="container text-center">
         <div class="album py-5 bg-light">
             <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
             <br>
-            <img align="center" alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-                <img align="center" alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
-                <img align="center" alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
-                <img align="center" alt="Rafa-HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                <img align="center" alt="Rafa-CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-                <img align="center" alt="Rafa-Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
-                <img align="center" alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
-                <img align="center" alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
-                <img align="center" alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain.svg">
-                <img align="center" alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
-            <ul class="list-unstyled competencias-list">
+            <div class="d-flex justify-content-center align-items-center flex-wrap">
+                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
+                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
+                <img alt="Rafa-HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+                <img alt="Rafa-CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+                <img alt="Rafa-Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+                <img alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
+                <img alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+                <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain.svg">
+                <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
+                <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
+            </div>
+            <ul class="list-unstyled competencias-list text-left">
                 <br>
                 <li><span class="competencia-pontuacao">•</span> Front-end</li>
                 <li><span class="competencia-pontuacao">•</span> HTML</li>
@@ -372,8 +375,8 @@
             <br>
         </div>     
     </div>
-<!--contato-->
 </section>
+<!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
             <div class="container-fluid">
