--- a/index.html
+++ b/index.html
@@ -89,15 +89,6 @@
         .itemMenu {
             color: white;
         }
-
-        .competencias-list {
-            font-size: larger;
-            text-align: left;
-            margin-left: 0;
-        }
-        .competencia-pontuacao {
-            margin-right: ; 
-        }
     </style>
 </head>
 <!--HOME-->
@@ -353,26 +344,8 @@
                 <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain.svg">
                 <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
                 <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
+                <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-plain.svg">
             </div>
-            <ul class="list-unstyled competencias-list text-left">
-                <br>
-                <li><span class="competencia-pontuacao">•</span> Front-end</li>
-                <li><span class="competencia-pontuacao">•</span> HTML</li>
-                <li><span class="competencia-pontuacao">•</span> CSS</li>
-                <li><span class="competencia-pontuacao">•</span> Bootstrap</li>
-                <li><span class="competencia-pontuacao">•</span> jQuery</li>
-                <li><span class="competencia-pontuacao">•</span> Javascript</li>
-                <li><span class="competencia-pontuacao">•</span> TypeScript</li>
-                <li><span class="competencia-pontuacao">•</span> Python</li>
-                <li><span class="competencia-pontuacao">•</span> C#</li>
-                <li><span class="competencia-pontuacao">•</span> C</li>
-                <li><span class="competencia-pontuacao">•</span> Scrum</li>
-                <li><span class="competencia-pontuacao">•</span> SQL</li>
-                <li><span class="competencia-pontuacao">•</span> Banco de Dados</li>
-            </ul>
-            <br>
-            <br>
-            <br>
         </div>     
     </div>
 </section>
