--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         .itemMenu {
             color: white;
         }
+        .icon-container img {
+            margin-right: 5px; 
+}
     </style>
 </head>
 <!--HOME-->
@@ -330,7 +333,7 @@
  <section id="competencias">
     <div class="container text-center">
         <div class="album py-5 bg-light">
-            <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
+            <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
             <br>
             <br>
             <div class="d-flex justify-content-center align-items-center flex-wrap">
@@ -354,6 +357,9 @@
         </div>     
     </div>
 </section>
+    <br>
+    <br>
+    <br>
 <!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
