--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
  <!-- Competências -->
  <section id="competencias">
     <div class="container text-center">
-        <div class="album py-5 bg-light">
+            <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
+            <br>
+            <br>
             <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
-            <br>
-            <br>
             <div class="d-flex justify-content-center align-items-center flex-wrap">
                 <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
                 <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
