--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             color: white;
         }
         .icon-container img {
-            margin-right: 5px; 
+            margin-right: 10px; 
 }
     </style>
 </head>
@@ -330,31 +330,56 @@
         </div>
     </section>
  <!-- Competências -->
- <section id="competencias">
+<section id="competencias">
     <div class="container text-center">
-            <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
-            <br>
-            <br>
-            <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
-            <div class="d-flex justify-content-center align-items-center flex-wrap">
-                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
-                <img alt="Rafa-Js" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
-                <img alt="Rafa-HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                <img alt="Rafa-CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-                <img alt="Rafa-Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
-                <img alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
-                <img alt="Rafa-Csharp" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+        <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
+        <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
+                <img alt="JavaScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+            </a>
+            <a href="https://www.typescriptlang.org/">
+                <img alt="TypeScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
+            </a>
+            <a href="https://www.java.com/">
+                <img alt="Java" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
+            </a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
+                <img alt="HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+            </a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+                <img alt="CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+            </a>
+            <a href="https://www.python.org/">
+                <img alt="Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+            </a>
+            <a href="https://dotnet.microsoft.com/languages/csharp">
+                <img alt="C#" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
+            </a>
+            <a href="https://devdocs.io/c/">
+                <img alt="C" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+            </a>
+            <a href="https://getbootstrap.com/">
                 <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain.svg">
+            </a>
+            <a href="https://www.cplusplus.com/">
                 <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
+            </a>
+            <a href="https://jquery.com/">
                 <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
+            </a>
+            <a href="https://github.com/">
                 <img alt="GitHub" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg">
+            </a>
+            <a href="https://code.visualstudio.com/">
                 <img alt="VSCode" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg">
+            </a>
+            <a href="https://www.postgresql.org/">
                 <img alt="SQL" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg">
+            </a>
+            <a href="https://www.sublimetext.com/">
                 <img alt="Sublime Text" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/en/d/d2/Sublime_Text_3_logo.png">
-                <br>
-            </div>
-        </div>     
+            </a>
+        </div>
     </div>
 </section>
     <br>
