--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         }
         .icon-container img {
             margin-right: 10px; 
+            margin-bottom: 10px;
 }
     </style>
 </head>
@@ -364,14 +365,14 @@
             <a href="https://dotnet.microsoft.com/languages/csharp">
                 <img alt="C#" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
             </a>
+            <a href="https://www.cplusplus.com/">
+                <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
+            </a>
             <a href="https://devdocs.io/c/">
                 <img alt="C" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
             </a>
             <a href="https://getbootstrap.com/">
                 <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-plain.svg">
-            </a>
-            <a href="https://www.cplusplus.com/">
-                <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
             </a>
             <a href="https://jquery.com/">
                 <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
