--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@
             color: rgb(236, 236, 236);
             margin-left: 4;
         }
+        .space1{
+            margin-bottom: 20px;
+        }
+        .space2{
+            margin-bottom: 210px;
+        }
+        .space3{
+            margin-bottom: 80px;
+        }
+        .space4{
+            margin-bottom: 100px;
+        }
+        .space5{
+            margin-bottom: 200px;
+        }
+        .space6{
+            margin-bottom: 150px;
+        }
         .itemMenu {
             color: white;
         }
@@ -140,16 +158,10 @@
             <a href="https://www.linkedin.com/in/laura-schneider-1bab1b2ba/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/_lauramachts/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
             <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank"><i style="color:white" class="fab fa-youtube"></i></a>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        </div>
+            <div class="space1">
+            </div>
     </section>
-     <!-- Projects -->
+     <!-- Projetos -->
     <section class="projetos">
      <div class="album py-5 bg-light " id="projetos">
            <div class="container">
@@ -175,7 +187,7 @@
                                <div class="d-flex justify-content-between align-items-center">
                                    <div class="btn-group">
                                        <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
-                                       <a href="https://github.com/lauramachts0/Hist-rico-Projetos-HTML-CSS/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                       <a href="https://github.com/lauramachts0/Portfolio-Pessoal/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                    </div>
                                    <small class="text-muted">Projeto Web</small>
                                </div>
@@ -275,28 +287,22 @@
             <h4>PT-BR</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Olá! Eu sou a Laura, tenho 18 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
+                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
 
                 Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
 
                 Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
-                </p>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <div class="space2">
+                </div>
         </div>
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">about me</h2>
             <h4>ENG</h4>
             <br>
             <p class="lead paragrafoBrancos">
-                Hello! My name is Laura, I'm 18 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
+                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
 
                 I am immersed in a journey of discovery and constant learning. Even before joining UFN, I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
 
@@ -312,17 +318,15 @@
         <div class="album py-5 bg-light">
             <div class="container">
                 <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
-                <br>
-                <br>
+                <div class="space3">
+                </div>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, além da grande dedicação nas disciplinas.</p>
                     <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
-                <br>
-                <br>
-                <br>
-                <br>
+                <div class="space4">
+                </div>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
                         Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
@@ -330,10 +334,8 @@
                     <footer class="blockquote-footer">Ricardo Frolich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
-                <br>
-                <br>
-                <br>
-                <br>
+                <div class="space5">
+                </div>
             </div>
         </div>
     </section>
@@ -392,10 +394,8 @@
         </div>
     </div>
 </section>
-    <br>
-    <br>
-    <br>
-    <br>
+    <div class="space6">
+    </div>
 <!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
