--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         .icon-container img {
             margin-right:  15px; 
             margin-bottom: 15px;
+        }
+        .icon-container a:hover img {
+        transform: scale(1.1); 
+        transition: transform 0.1s ease; 
+    
 }
     </style>
 </head>
@@ -434,4 +439,3 @@
         });
     </script>
 </body>
-
